Autentificacao adicionada na documentacao swagger
